# nextinspace

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  dev-requirements.txt  mypi.ini  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: conf.py  index.rst  nextinspace.rst  requirements.txt
img/: demo.cast
nextinspace/: __init__.py  __main__.py  api.py  parser.py  space.py  viewer.py
nextinspace/cli/: console.py  parser.py  viewer.py
tests/: conftest.py  test_api.py  test_nextinspace.py  test_space.py
tests/api/: launch.json  rocket.json  test_api.py  test_other_event.json
tests/cli/: test_viewer.py
tests/data/: event.json  launch.json
