[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.coverage.run]
omit = ["*/site-packages/*"]

[tool.flakehell]
max_line_length = 120
exclude = [".git", "__pycache__"]

[tool.flakehell.exceptions."tests/"]
pyflakes = ["-F403", "-F405"]

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-E501", "-W503"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "nextinspace"
version = "2.0.5"
description = "Never miss a launch."
license = "GPL-3.0-or-later"
authors = ["Gideon Shaked <gideonshaked@gmail.com>"]
maintainers = ["Gideon Shaked <gideonshaked@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gideonshaked/nextinspace"
repository = "https://github.com/gideonshaked/nextinspace"
keywords = ["space", "nextinspace", "space news", "spaceflight", "rockets"]
classifiers = ["Environment :: Console",
        "License :: OSI Approved :: GNU General Public License (GPL)",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3 :: Only",
        "Natural Language :: English"]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.24"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
pre-commit = "^2.9.3"
pytest = "^7.0.0"
requests-mock = "^1.8"
pytest-lazy-fixtures = "^1.1.1"
coverage = {version = "^5.3.1", extras = ["toml"]}

[tool.poetry.scripts]
nextinspace = "nextinspace.cli.console:run"
